# cobalt-lang

./: Cargo.toml  LICENSE  README.md  build.rs  test.txt
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
cobalt-ast/: Cargo.toml  build.rs
cobalt-ast/src/: ast.rs  cfg.rs  context.rs  dottedname.rs  error.rs  intrinsics.rs  lib.rs  ops-old.rs  ops.rs  serial_utils.rs  types.rs  value.rs  varmap.rs
cobalt-ast/src/ast/: flow.rs  funcs.rs  groups.rs  literals.rs  misc.rs  ops.rs  scope.rs  vars.rs
cobalt-ast/src/errors/: files.rs
cobalt-ast/src/errors/help/: E0103.md
cobalt-ast/src/intrinsics/: enums.rs  misc.rs  types.rs  version.rs
cobalt-ast/src/types/: agg.rs  custom.rs  enums.rs  float.rs  func.rs  int.rs  intrinsic.rs  mem.rs  meta.rs  utils.rs
cobalt-build/: Cargo.toml  build.rs
cobalt-build/cxx/: lld.cpp  lld.hpp
cobalt-build/src/: build.rs  cc.rs  ccomp.rs  gluon_build.rs  graph.rs  lib.rs  libs.rs  lld.rs  obj.rs  opt.rs  pkg.rs  serde_utils.rs
cobalt-build/src/cc/: impl_cc.rs
cobalt-build/src/lld/: glue.rs
cobalt-cli/: Cargo.toml  build.rs
cobalt-cli/src/: lib.rs  main.rs
cobalt-cli/src/tests/: hello_world.rs  mod.rs
cobalt-cli/src/tests/inputs/: hello_world.co  hello_world_linked_lib.co  hello_world_linked_main.co
cobalt-errors/: Cargo.toml
cobalt-errors/src/: color.rs  error.rs  errs.md  errs.txt  files.rs  info.rs  lib.rs  old.rs
cobalt-errors/src/help/: E0104.md  E0110.md  template.md
cobalt-llvm/: Cargo.toml  build.rs
cobalt-llvm/build-stuff/: static-libs.txt  target.c
cobalt-llvm/src/: lib.rs
cobalt-parser/: Cargo.toml
cobalt-parser/src/: ast.rs  lexer.rs  lib.rs  ops.rs  tests.rs  utils.rs
cobalt-parser/src/lexer/: mod.rs  tokenizer.rs  tokens.rs
cobalt-parser/src/parser/: annotations.rs  cdn.rs  decl.rs  expr.rs  mod.rs  top_level.rs
cobalt-parser/src/parser/expr/: binop_rhs.rs  literal.rs  mod.rs
cobalt-parser/src/tests/: mod.rs
cobalt-parser/src/tests/inputs/: hello_world.co  test_1.co  test_2.co
cobalt-parser/src/tests/lexer/: mod.rs  reader.rs  tokenizer.rs
cobalt-parser/src/tests/parser/: decl.rs  expr.rs  general.rs  mod.rs
cobalt-parser/src/tests/parser/expr/: literals.rs
cobalt-parser/src/tokenizer/: mod.rs  tokenizer.rs  tokens.rs
cobalt-utils/: Cargo.toml
cobalt-utils/src/: cell.rs  intern.rs  lib.rs  misc.rs  static_ref.rs  tests.rs
cobalt-utils/src/tests/: intern.rs
src/: build.rs  cc.rs  color.rs  graph.rs  jit.rs  libs.rs  main.rs  opt.rs  package.rs  pkg.rs
src/cobalt/: ast.rs  context.rs  dottedname.rs  error.rs  errors.rs  lib.rs  misc.rs  parsed_type.rs  parser.rs  tests.rs  types.rs  value.rs  varmap.rs
src/cobalt/ast/: flow.rs  funcs.rs  groups.rs  literals.rs  misc.rs  ops.rs  scope.rs  vars.rs
src/cobalt/errors/: info.rs
src/cobalt/errors/help/: E0102.md
src/cobalt/parser/: ast.rs  lexer.rs  ops.rs
src/cobalt/tests/: lexer.rs
src/cobalt/types/: utils.rs
