[package]
name = "cobalt-lang"
version = "0.5.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
bitvec = "1.0.1"
inkwell = { version = "0.1.1", features = ["llvm15-0-no-llvm-linking"] }
llvm-sys = { version = "150", features = ["no-llvm-linking"] }
unicode-ident = "1.0.8"
walkdir = "2"
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
either = { version = "1.8.1", features = ["serde"] }
glob = "0.3.1"
flate2 = "1.0.25"
git2 = "0.17.0"
zip-extract = "0.1.2"
tar = "0.4.38"
try-lazy-init = "0.0.2"
lazy_static = "1.4.0"
codespan-reporting = "0.11.1"
temp-file = "0.1.7"
ureq = "2.6.2"
path-calculate = "0.1.3"
termcolor = "1.2.0"
owned_chars = "0.3.2"
object = { version = "0.31.0", features = ["write"] }
anyhow = "1.0.70"
anyhow-std = "0.1.3"

[build-dependencies]
lazy_static = "1.0"
regex = "1.0"
semver = "1.0.7"

# features passed to llvm-sys
[features]
default = ["strict-versioning"]
strict-versioning = ['llvm-sys/strict-versioning']
no-llvm-linking = []

prefer-dynamic = []
force-dynamic = []
prefer-static = []
force-static = []


[lib]
name = "cobalt"
path = "src/cobalt/lib.rs"

[[bin]]
name = "co"
path = "src/main.rs"
