[package]
name = "cobalt-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
cobalt-errors = { path = "../cobalt-errors" }
cobalt-llvm = { path = "../cobalt-llvm" }
cobalt-utils = { path = "../cobalt-utils" }
bitvec = "1.0.1"
either = "1.8.1"
glob = "0.3.1"
owned_chars = "0.3.2"
bstr = { version = "1.5.0", default-features = false, features = ["std"] }
