[package]
name = "cobalt-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
cobalt-errors = { path = "../cobalt-errors" }
cobalt-llvm = { path = "../cobalt-llvm", default-features = false }
cobalt-utils = { path = "../cobalt-utils" }
bitvec = "1.0.1"
either = "1.9.0"
glob = "0.3.1"
owned_chars = "0.3.2"
bstr = { version = "1.7.0", default-features = false, features = ["std"] }
derive_more = "0.99.17"
ref-cast = "1.0.20"
slab = "0.4.9"
inventory = "0.3.12"
once_cell = "1.18.0"
hashbrown = "0.14.2"
flurry = "0.4.0"
