[package]
name = "cobalt-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
cobalt-errors = { path = "../cobalt-errors", features = ["serde"] }
cobalt-llvm = { path = "../cobalt-llvm", default-features = false }
cobalt-utils = { path = "../cobalt-utils" }
bitvec = "1.0.1"
either = "1.9.0"
glob = "0.3.1"
owned_chars = "0.3.2"
bstr = { version = "1.7.0", default-features = false, features = ["std", "serde"] }
derive_more = "0.99.17"
ref-cast = "1.0.20"
slab = "0.4.9"
inventory = "0.3.12"
once_cell = "1.18.0"
hashbrown = "0.14.2"
flurry = { version = "0.5.0", features = ["serde"] }
thiserror = "1.0.51"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_state = "0.4.8"
serde_derive_state = "0.4.10"
const-identify = "0.1.1"
erased-serde = "0.4.1"
deranged = { version = "0.3.10", features = ["serde"] }
serde_json = "1.0.111"
hex = { version = "0.4.3", features = ["serde"] }
serde_bytes = "0.11.14"
