[package]
name = "cobalt-build"
version = "0.5.3"
edition = "2021"

[dependencies]
cobalt-parser.path = "../cobalt-parser"
cobalt-ast.path = "../cobalt-ast"
cobalt-errors.path = "../cobalt-errors"
cobalt-utils.path = "../cobalt-utils"
inkwell = "0.2.0"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
either = { version = "1.8.1", features = ["serde"] }
glob = "0.3.1"
flate2 = "1.0.26"
git2 = "0.17.2"
zip-extract = "0.1"
tar = "0.4.38"
lazy_static = "1.4.0"
temp-file = "0.1.7"
ureq = "2.6.2"
path-calculate = "0.1.3"
termcolor = "1.2.0"
owned_chars = "0.3.2"
object = { version = "0.31.1", features = ["write"] }
anyhow = "1.0.71"
anyhow-std = "0.1.3"
thiserror = "1.0.40"
cc = "1.0"
lasso = { version = "0.7.2", features = ["multi-threaded"] }
indexmap = "1.9.3"
os_str_bytes = "6.5.0"
toml = "0.7.4"
