[package]
name = "cobalt-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
cobalt-parser = { path = "../cobalt-parser" }
cobalt-ast = { path = "../cobalt-ast" }
cobalt-errors = { path = "../cobalt-errors" }
cobalt-utils = { path = "../cobalt-utils" }
cobalt-llvm = { path = "../cobalt-llvm", default-features = false  }
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
either = { version = "1.9.0", features = ["serde"] }
flate2 = "1.0.28"
git2 = "0.18.1"
zip-extract = "0.1"
tar = "0.4.40"
lazy_static = "1.4.0"
temp-file = "0.1.7"
ureq = "2.8.0"
path-calculate = "0.1.3"
termcolor = "1.3.0"
owned_chars = "0.3.2"
object = { version = "0.32.1", features = ["write"] }
anyhow = "1.0.75"
anyhow-std = "0.1.4"
thiserror = "1.0.50"
lasso = { version = "0.7.2", features = ["multi-threaded"] }
indexmap = "2.0.2"
os_str_bytes = { version = "6.6.1", features = ["conversions"] }
toml = { version = "0.8.4", optional = true }
bstr = "1.7.0"
hashbrown = { version = "0.14.2", features = ["serde"] }
cc = { version = "1.0.83", optional = true }
ar = "0.9.0"
walkdir = "2.4.0"
wax = "0.6.0"
serde_json = { version = "1.0.107", optional = true }


[features]
config-toml = ["toml"]
config-json = ["serde_json"]
config-all = ["config-toml", "config-json"]
cc-build = ["cc"]
build-default = ["cc-build", "config-all"]
default = ["build-default"]
