[package]
name = "cobalt-cli"
version = "0.5.4"
edition = "2021"

[dependencies]
cobalt-parser = { path = "../cobalt-parser" }
cobalt-ast = { path = "../cobalt-ast" }
cobalt-build = { path = "../cobalt-build" }
cobalt-errors = { path = "../cobalt-errors" }
cobalt-utils = { path = "../cobalt-utils" }
inkwell = "0.2.0"
toml = "0.7.4"
temp-file = "0.1.7"
anyhow = "1.0.71"
anyhow-std = "0.1.3"
termcolor = "1.2.0"
miette = { version = "5.9.0", features = ["fancy"] }
clap = { version = "4.3.0", features = ["derive"] }
const_format = "0.2.31"
human-repr = "1.1.0"

[build-dependencies]
lazy_static = "1.4"
regex = "1.8"
semver = "1.0"

[[bin]]
name = "co"
path = "src/main.rs"
