[package]
name = "cobalt-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
cobalt-parser = { path = "../cobalt-parser" }
cobalt-ast = { path = "../cobalt-ast" }
cobalt-build = { path = "../cobalt-build" }
cobalt-errors = { path = "../cobalt-errors" }
cobalt-utils = { path = "../cobalt-utils" }
cobalt-llvm = { path = "../cobalt-llvm" }
inkwell = "0.2.0"
toml = "0.8.0"
temp-file = "0.1.7"
anyhow = "1.0.71"
anyhow-std = "0.1.3"
termcolor = "1.2.0"
miette = { version = "5.9.0", features = ["fancy"] }
clap = { version = "4.3.0", features = ["derive"] }
const_format = "0.2.31"
human-repr = "1.1.0"
object = { version = "0.32.0", features = ["write"] }
ar = "0.9.0"
ambassador = "0.3.5"
os_str_bytes = { version = "6.6.1", features = ["conversions"] }

[[bin]]
name = "co"
path = "src/main.rs"
