[package]
name = "cobalt-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
cobalt-parser = { path = "../cobalt-parser" }
cobalt-ast = { path = "../cobalt-ast" }
cobalt-build = { path = "../cobalt-build", default-features = false }
cobalt-errors = { path = "../cobalt-errors" }
cobalt-utils = { path = "../cobalt-utils" }
cobalt-llvm = { path = "../cobalt-llvm", default-features = false  }
toml = "0.8.4"
temp-file = "0.1.7"
anyhow = "1.0.75"
anyhow-std = "0.1.4"
termcolor = "1.3.0"
miette = { version = "7.1.0", features = ["fancy"] }
clap = { version = "4.4.7", features = ["derive"] }
const_format = "0.2.32"
human-repr = "1.1.0"
object = { version = "0.32.1", features = ["write"] }
ar = "0.9.0"
os_str_bytes = { version = "7.0.0", features = ["conversions"] }
clio = { version = "0.3.4", features = ["clap-parse"] }
serde_json = "1.0.111"

[[bin]]
name = "co"
path = "src/main.rs"

[features]
http = ["clio/http-ureq"]
