[package]
name = "cobalt-errors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
termcolor = "1.3.0"
miette = { version = "7.1.0", features = ["serde"] }
once_cell = "1.18.0"
thiserror = "1.0.50"
ordinal = "0.3.2"
aovec = "1.1.0"
serde = { version = "1.0.193", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "miette/serde"]
