[package]
name = "cobalt-llvm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
llvm-sys = "160"

[build-dependencies]
lazy_static = "1.4"
regex = "1.8"
const_format = "0.2.31"
semver = "1.0"

# features passed to llvm-sys
[features]
default = ["strict-versioning", "prefer-dynamic"]
strict-versioning = ["llvm-sys/strict-versioning"]
no-llvm-linking = ["llvm-sys/no-llvm-linking"]

prefer-dynamic = ["llvm-sys/prefer-dynamic"]
force-dynamic = ["llvm-sys/force-dynamic"]
prefer-static = ["llvm-sys/prefer-static"]
force-static = ["llvm-sys/force-static"]
