[package]
name = "cobalt-llvm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
inkwell = { version = "0.2.0", features = ["llvm16-0"]}
llvm-sys = { version = "160", features = ["no-llvm-linking", "disable-alltargets-init"]}

[build-dependencies]
lazy_static = "1.4"
regex = "1.10"
const_format = "0.2.32"
semver = "1.0"
array-concat = "0.5.2"
cc = "1.0.83"

# features passed to llvm-sys
[features]

prefer-dynamic = []
prefer-static = []
force-dynamic = []
force-static = []
no-llvm-linking = []
disable-alltargets-init = []