[package]
name = "cobalt-parser"
version = "0.6.0"
edition = "2021"

[dependencies]
cobalt-errors = { path = "../cobalt-errors" }
cobalt-utils = { path = "../cobalt-utils" }
cobalt-ast = { path = "../cobalt-ast" }
unicode-ident = "1.0.9"
either = "1.8.1"
chumsky = { version = "1.0.0-alpha.4", features = ["label"] }
delegate-attr = "0.2.9"
