[package]
name = "cobalt-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
cobalt-errors = { path = "../cobalt-errors" }
cobalt-utils = { path = "../cobalt-utils" }
cobalt-ast = { path = "../cobalt-ast" }
unicode-ident = "1.0.9"
either = "1.8.1"
chumsky = { version = "=1.0.0-alpha.4", features = ["label"] }
