[package]
name = "cobalt-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
boxcar = "0.2.4"
hashbrown = { version = "0.14.2", features = ["raw"] }
once_cell = "1.18.0"
