[package]
name = "cobalt-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
boxcar = "0.2.4"
bumpalo = { version = "3.14.0", features = ["boxed", "std"] }
bumpalo-herd = "0.1.2"
hashbrown = "0.14.2"
once_cell = "1.18.0"
ouroboros = "0.18.2"
parking_lot = "0.12.1"
thread_local = "1.1.7"
